# StockTrack

./: .gitignore  LICENSE
StockProtocol/: CMakeLists.linux.txt  CMakeLists.txt  README.txt
StockProtocol/header/: stockprotocol.h
StockProtocol/src/: python_bindings.cpp  stockprotocol.cpp
StockTrackClient/: CMakeLists.txt
StockTrackClient/header/: requesthandler.h  stock.h  stockcollection.h  stockprotocol.h  tcpconnect.h
StockTrackClient/qml/: Main.qml  PlotChart.qml
StockTrackClient/src/: main.cpp  requesthandler.cpp  stockcollection.cpp  tcpconnect.cpp
StockTrackServer/: StockTrack.py  StockTrackServer.py
